--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<!-- saved from url=(0032)http://home.eps.hw.ac.uk/~db224/ -->
-<html class=" desktop"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!DOCTYPE HTML>
+<!--
+	Halcyonic by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
 		<title>Dr Deepayan Bhowmik</title>
-		
-		<meta name="description" content="">
-		<meta name="keywords" content="">
-		<script src="./index_files/jquery.min.js"></script>
-		<script src="./index_files/config.js"></script>
-		<style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{-webkit-text-size-adjust:none}</style><style type="text/css">@-ms-viewport{width: device-width}</style><style type="text/css">body{min-width:1200px}.container{margin-left:auto;margin-right:auto;width:1200px}.container.small{width:900px}.container.big{width:100%;max-width:1500px;min-width:1200px}</style><style type="text/css">.\31 2u{width:100%}.\31 1u{width:91.6666666667%}.\31 0u{width:83.3333333333%}.\39 u{width:75%}.\38 u{width:66.6666666667%}.\37 u{width:58.3333333333%}.\36 u{width:50%}.\35 u{width:41.6666666667%}.\34 u{width:33.3333333333%}.\33 u{width:25%}.\32 u{width:16.6666666667%}.\31 u{width:8.3333333333%}.\-11u{margin-left:91.6666666667%}.\-10u{margin-left:83.3333333333%}.\-9u{margin-left:75%}.\-8u{margin-left:66.6666666667%}.\-7u{margin-left:58.3333333333%}.\-6u{margin-left:50%}.\-5u{margin-left:41.6666666667%}.\-4u{margin-left:33.3333333333%}.\-3u{margin-left:25%}.\-2u{margin-left:16.6666666667%}.\-1u{margin-left:8.3333333333%}</style><style type="text/css">.row>*{float:left;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}.row:after{content:'';display:block;clear:both;height:0}.row:first-child>*{padding-top:0!important}</style><style type="text/css">.row.flush{margin-left:0}.row.flush>*{padding:0!important}.row>*{padding-left:40px}.row+.row>*{padding:40px 0 0 40px}.row{margin-left:-40px}.row.half>*{padding-left:20px}.row+.row.half>*{padding:20px 0 0 20px}.row.half{margin-left:-20px}.row.quarter>*{padding-left:10px}.row+.row.quarter>*{padding:10px 0 0 10px}.row.quarter{margin-left:-10px}.row.oneandhalf>*{padding-left:60px}.row+.row.oneandhalf>*{padding:60px 0 0 60px}.row.oneandhalf{margin-left:-60px}.row.double>*{padding-left:80px}.row+.row.double>*{padding:80px 0 0 80px}.row.double{margin-left:-80px}</style><style type="text/css">.not-desktop{display:none!important}.only-mobile,.only-1000px{display:none!important}</style><link rel="stylesheet" type="text/css" href="./index_files/style.css"><link rel="stylesheet" type="text/css" href="./index_files/style-desktop.css"><script src="./index_files/skel.min.js"></script>
-		<script src="./index_files/skel-panels.min.js"></script>
-		<noscript>
-			&lt;link rel="stylesheet" href="css/skel-noscript.css" /&gt;
-			&lt;link rel="stylesheet" href="css/style.css" /&gt;
-			&lt;link rel="stylesheet" href="css/style-desktop.css" /&gt;
-		</noscript>
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="subpage"><div id="skel-panels-pageWrapper" style="position: relative; left: 0px; right: 0px; top: 0px; backface-visibility: hidden; transition: -webkit-transform 0.25s ease-in-out;">
-	
-		<!-- Header -->
+	<body>
+		<div id="page-wrapper">
+
+					<!-- Header -->
 			<div id="header-wrapper">
 				<header id="header" class="container">
 					<div class="row">
@@ -50,12 +47,12 @@
 						<div class="row">
 							<div class="4u">
 								 <!-- Banner Image -->
-									<a href="http://home.eps.hw.ac.uk/~db224/#" class="bordered-feature-image"><img src="./index_files/deepayan.jpg" alt=""></a>
+									<a href="http://home.eps.hw.ac.uk/~db224/#" class="bordered-feature-image"><img src="./images/deepayan.jpg" alt=""></a>
 																						
 							</div>
 							<div class="8u">
 							<section>										
-									<h3>Research Associate</h3>
+									<h3>Lecturer</h3>
 									<p>
 											Project: <a href="http://rathlin.hw.ac.uk/" target="_blank" title="Project: Rathlin">Rathlin</a>,
 											Programmable embedded platforms for remote and compute intensive image processing applications. <br>
