--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 							<section>										
 									<h3>Lecturer</h3>
 									<p>
-											Project: <a href="http://rathlin.hw.ac.uk/" target="_blank" title="Project: Rathlin">Rathlin</a>,
-											Programmable embedded platforms for remote and compute intensive image processing applications. <br>
+											Department of Computing | Sheffield Hallam University <br>
 										        Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. 
 									</p>
 									
