--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<section>										
 									<h3>Lecturer</h3>
 									<p>
-											Department of Computing | Sheffield Hallam University <br>
+											Department of Computing | Sheffield Hallam University, Sheffield, UK. <br>
 										        Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. 
 									</p>
 									
