Home page updated.

--- a/index.html
+++ b/index.html
@@ -54,18 +54,20 @@
 							<section>										
 									<h3>Lecturer</h3>
 									<p>
-											Department of Computing | Sheffield Hallam University, Sheffield, UK. <br>
-										        Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. 
+<a href="https://www.shu.ac.uk/about-us/academic-departments/computing"> Department of Computing </a> | 
+<a href="www.shu.ac.uk"> Sheffield Hallam University </a> <br>
+Sheffield, S1 1WB, <br>
+United Kingdom 
+</p>
+<p>
+<a href="https://www.digitalcatapultcentre.org.uk/university-partner/deepayan-bhowmik/">EPSRC-Digital Catapult Researcher in Residence</a>, <br>
+<a href= "https://www.digitalcatapultcentre.org.uk/">Digital Catapult Center </a>, London, United Kingdom.
+</p>
+<p>
+Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. <br>
 									</p>
-									
-									<p>
-											<a href="http://visionlab.eps.hw.ac.uk/" target="_blank" title="Vision Lab">Vision Lab</a>,											
-											<a href="http://www.eps.hw.ac.uk/institutes/sensors-signals-systems.htm" target="_blank">Institute of Sensors Signals and Systems</a>, <br>
-											<a href="http://www.hw.ac.uk/" target="_blank">Heriot-Watt University</a>, <br>
-											Edinburgh, EH14 4AS, 
-											United Kingdom <br>
-
-										Contact: <a href="mailto:d.bhowmik@hw.ac.uk">d.bhowmik@hw.ac.uk</a> 
+																	
+										Contact: <a href="mailto:deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> 
 										| <a href="http://uk.linkedin.com/in/deepayanbhowmik" target="_blank">Linkedin</a>
 										| <a href="http://twitter.com/ditunilu" target="_blank">Twitter</a>										| <a href="http://orcid.org/0000-0003-1762-1578" target="_blank"> Orcid </a>
 									</p>
