--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 									<h3>Lecturer</h3>
 									<p>
 <a href="https://www.shu.ac.uk/about-us/academic-departments/computing"> Department of Computing </a> | 
-<a href="www.shu.ac.uk"> Sheffield Hallam University </a> | Sheffield, S1 1WB, United Kingdom. 
-</p>
+<a href="www.shu.ac.uk"> Sheffield Hallam University </a> | Sheffield, S1 1WB, United Kingdom. </p>
 <p>
 <a href="https://www.digitalcatapultcentre.org.uk/university-partner/deepayan-bhowmik/">EPSRC-Digital Catapult Researcher in Residence</a>, <br>
 <a href= "https://www.digitalcatapultcentre.org.uk/">Digital Catapult Center </a>, London, United Kingdom.
