--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <a href="https://www.shu.ac.uk/about-us/academic-departments/computing"> Department of Computing </a> | 
 <a href="www.shu.ac.uk"> Sheffield Hallam University </a> | Sheffield, S1 1WB, United Kingdom. </p>
 <p>
-<a href="https://www.digitalcatapultcentre.org.uk/university-partner/deepayan-bhowmik/">EPSRC-Digital Catapult Researcher in Residence</a>, <br>
-<a href= "https://www.digitalcatapultcentre.org.uk/">Digital Catapult Center </a>, London, United Kingdom.
+<a href="https://www.digitalcatapultcentre.org.uk/university-partner/deepayan-bhowmik/">EPSRC-Digital Catapult Researcher in Residence</a> |
+<a href= "https://www.digitalcatapultcentre.org.uk/">Digital Catapult Center </a> | London, United Kingdom.
 </p>
 <p>
 Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. <br>
