--- a/about.html
+++ b/about.html
@@ -51,13 +51,13 @@
 							<div class="12u">
   								<section>
 								    <center>										
-									<a href="http://home.eps.hw.ac.uk/~db224/about.html#education">Education</a> | 
-									<a href="http://home.eps.hw.ac.uk/~db224/about.html#employment">Employment</a> |									
-									<a href="http://home.eps.hw.ac.uk/~db224/about.html#journalRev">Reviewer for Journals and Conferences</a> |
-									<a href="http://home.eps.hw.ac.uk/~db224/about.html#confOrg">Conference Organisation</a> |
+									<a href="about.html#education">Education</a> | 
+									<a href="about.html#employment">Employment</a> |									
+									<a href="about.html#journalRev">Reviewer for Journals and Conferences</a> |
+									<a href="about.html#confOrg">Conference Organisation</a> |
 									<!--<a href="#confRev">Reviewer for Conferences</a> |
 									<li><a href="#awards">Awards</a></li> -->
-									<a href="http://home.eps.hw.ac.uk/~db224/about.html#students">Students</a> 
+									<a href="about.html#students">Students</a> 
 								 </center>
 
 								 <p> <a name="education"></a>	 
@@ -72,7 +72,8 @@
 								 <p> <a name="employment"></a>	 
 									</p><h3>Employment</h3>
 									<ul class="link-list">
-										<li>Research Associate, <a href="http://www.hw.ac.uk/" target="_blank">Heriot-Watt University</a>, Edinburgh, UK | 2013-Current.</li>
+										<li>Lecturer, <a href="http://www.shu.ac.uk/" target="_blank">Sheffield Hallam University</a>, Sheffield, UK | 2016-Current.</li>
+										<li>Research Associate, <a href="http://www.hw.ac.uk/" target="_blank">Heriot-Watt University</a>, Edinburgh, UK | 2013-2016.</li>
 										<li>Research Associate, <a href="http://www.sheffield.ac.uk/" target="_blank">The University of Sheffield</a>, Sheffield, UK | 2011-2013.</li>
 										<li>System Engineer, <a href="http://www.abb.com/" target="_blank">ABB Ltd.</a>, Vadodara, India | 2003-2005.</li>
 									</ul>
