--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<div class="row">
 							<div class="4u">
 								 <!-- Banner Image -->
-									<a href="http://home.eps.hw.ac.uk/~db224/#" class="bordered-feature-image"><img src="./images/deepayan.jpg" alt=""></a>
+									<a href="index.html" class="bordered-feature-image"><img src="./images/deepayan.jpg" alt=""></a>
 																						
 							</div>
 							<div class="8u">
