Publication list updated

--- a/publication.html
+++ b/publication.html
@@ -79,7 +79,9 @@
 								<h3>Journals (J#) and Conferences (C#)</h3>									
 								<font color="#FF4000">2016</font> 
 								<ul class="link-list">
-								<li>J7. <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 ">Quality Scalability Aware Watermarking for Visual Content</font>, IEEE Transactions on Image Processing, Vol. 25, Issue: 11, Nov, 2016. [<a href="http://home.eps.hw.ac.uk/~db224/download/BA_SC_WM.pdf">PDF</a>][<a href="http://dx.doi.org/10.1109/TIP.2016.2599785">DOI</a>][<a href="https://github.com/dbhowmik/scalableWM">Source Code</a>] </li>
+								<li>J8. <u>D. Bhowmik</u> M. Oakes and C. Abhayaratne, <font color="#500000 "> Visual Attention-based Image Watermarking </font>, Accepted for publication in IEEE Access. [PDF][DOI] </li>
+								<li>B1. <u>D. Bhowmik</u> and M. Emambakhsh, <font color="#500000 "> Image Processing for Surveillance and Security </font>, Accepted for publication in Handbook of Research on Applied Cybernetics and Systems Science, IGI Global. [PDF][DOI] </li>
+								<li>J7. <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 ">Quality Scalability Aware Watermarking for Visual Content</font>, IEEE Transactions on Image Processing, Vol. 25, Issue: 11, Nov, 2016. [<a href="http://home.eps.hw.ac.uk/~db224/download/BA_SC_WM.pdf">PDF</a>][<a href="http://dx.doi.org/10.1109/TIP.2016.2599785">DOI</a>][<a href="https://github.com/dbhowmik/scalableWM">Source Code</a>] </li>				
 								<li>C20. R. Stewart, G. Michaelson, <u>D. Bhowmik</u>, P. Garcia and A. Wallace, <font color="#500000 ">A Dataflow IR for Memory Efficient RIPL Compilation to FPGAs</font>, [Accepted] International Workshop on Data Locality in Modern Computing Systems (<a href="http://www.dlmcs.org/2016/">DLMCS 2016</a>), December 14-16, 2016, Granada, Spain. [PDF][DOI] </li>
 
 								<font color="#FF4000">2015</font> 
