minor in header

--- a/research.html
+++ b/research.html
@@ -94,7 +94,7 @@
 	<body>
 		<div id="page-wrapper">
 
-!-- Header -->
+<!-- Header -->
 			<div id="header-wrapper">
 				<header id="header" class="container">
 					<div class="row">
