color style change.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Commit
 
 		<!-- Copyright -->
 			<div id="copyright">
-				© Deepayan Bhowmik. All rights reserved. 2015.
+				© Deepayan Bhowmik. All rights reserved. 
 			</div>
 	
 
