--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 									<a href="research.html">Research</a>
 									<a href="publication.html">Publications</a>
 									<a href="funding.html">Funding</a>
-									<!--<a href="other.html">Other stuffs</a>-->
+									<a href="openings.html">Openings</a>
 								</nav>
 
 						</div>
@@ -81,9 +81,11 @@
 								 <p> <a name="journalRev"></a>	
 									</p><h3>Reviewer for Journals and Conferences</h3>
 									<ul class="link-list">
-									 	<li>I usually record my reviewing activities in Publons. [<a href="https://publons.com/author/587452/" target="_blank">My Publons Profile</a>]</li>
+									 	<li>I am a reviewer for several journals and conferences including IEEE-TIFS, IEEE-TCSVT, ACM TOMM, IEEE TCS II, EURASIP JASP, Elsevier JSP: Image Communication.  I usually record my reviewing activities in Publons. [<a href="https://publons.com/author/587452/" target="_blank">My Publons Profile</a>]</li>
+										<!--<li>IEEE Transactions on Information Forenscis and Security </li>
+										<li>IEEE Transactions on Circuit Systems and Video Technology
 
-										<!--<li>ACM Transactions on Multimedia Computing, Communications and Applications (ACM TOMM / TOMCCAP).</li>
+										<li>ACM Transactions on Multimedia Computing, Communications and Applications (ACM TOMM / TOMCCAP).</li>
 										<li>IEEE Transactions on Circuits and Systems II: Express Letters.</li>
 	  									<li>EURASIP Journal on Advances in Signal Processing.<li>										
 										<li>Elsevier Journal of Signal Processing: Image Communication. </li>
@@ -115,8 +117,8 @@
 									</p><h3>Conference Organisation &amp; Program Committee Member</h3>
 									<ul class="link-list">										
 									    <li>Organising Chair: <a href="http://icacci-conference.org/web/SSPPSC-2015" target="_blank">Special session on Signal Processing &amp; Personalisation in Smart Cities, ICACCI-2015, ICACCI-2016</a>.	</li>								
-										<li>Program committee member, IEEE International Conference on Image Processing (ICIP) | 2014, 2015, 2016.</li>
-										<li>Program committee member, IEEE International Conference on Signal Image Technology &amp; Internet based Systems (SITIS) | 2014, 2015, 2016.</li> 							<li>Program committee member, International Conference on Advances in Computing, Communications &amp; Informatics (ICACCI) | 2015, 2016.</li>
+										<li>Program committee member, IEEE International Conference on Image Processing (ICIP) | 2014-17.</li>
+										<li>Program committee member, IEEE International Conference on Signal Image Technology &amp; Internet based Systems (SITIS) | 2014-16.</li> 							<li>Program committee member, International Conference on Advances in Computing, Communications &amp; Informatics (ICACCI) | 2015-17.</li>
 										<li>Program committee member, International Symposium on Computer Vision and the Internet (VisionNet) | 2016.</li> 									
 									</ul>																		
 								 <p></p>
