--- a/funding.html
+++ b/funding.html
@@ -32,9 +32,8 @@
 									<a href="research.html">Research</a>
 									<a href="publication.html">Publications</a>
 									<a href="funding.html">Funding</a>
-									<!--<a href="other.html">Other stuffs</a>-->
+									<a href="openings.html">Openings</a>
 								</nav>
-
 						</div>
 					</div>
 				</header>
@@ -47,9 +46,11 @@
 						<div class="row">
 							<div class="12u">
 								<section>								 
-								 <p> <a name="awards"></a>										
-									</p><h3>External Funding and Awards</h3>
+								 <h3>External Funding and Awards (Combined value to date: GBP 127,000)</h3>
 									<ul class="link-list">
+										<li> HEIF Impact fellowship on <font color="#500000"> Low Power Accelarated Vision System Design </font> (in collaboration with <a href="http://www.alpha-data.com/"> Alpha Data</a>, Edinburgh), Sheffield Hallam University, Sheffield, UK. | 2017 | Funding Value: GBP 4,590.</li> 
+										<li> Teaching enhancement grant (x2), Sheffield Hallam University, Sheffield, UK. | 2017 | Funding Value: GBP 2,000. </li> 
+										<li>Mini-Workshop organisation on <font color="#500000">Low power and adaptive computer vision for scene understanding</font>, Visual image interpretation in humans and machines (ViiHM), EPSRC, United Kingdom and Department of Computing, Sheffield Hallam University. [<a href="http://www.viihm.org.uk/">Link</a>] | 2016-2017 | Funding value: GBP 3,030. </li>	
 										<li>  EPSRC Digital Catapult fellowship (Researcher in Residence Program), <font color="#500000"> Self-Embedding Watermarking for Media Copyright Protection (SeWMediaCoP) </font>, Engineering and Physical Sciences Research Council (EPSRC), United Kingdom. [<a href="https://www.epsrc.ac.uk/funding/calls/resinresdec2015/">Link</a>] | 2016-2017 | Funding value: GBP 24,759. </li>
 										<li>Mini-Workshop organisation on <font color="#500000"> Higher level scence understanding and application in robot vision</font>, Visual image interpretation in humans and machines (ViiHM), EPSRC, United Kingdom. [<a href="http://www.viihm.org.uk/">Link</a>] | 2015-2016 | Funding value: GBP 2,120. </li>	
 									 	<li>EPSRC-BP Dorothy Hodgkin Postgraduate Award (DHPA), UK for PhD research on <font color="#500000"> Robust watermarking techniques for scalable coded image and video.</font>, Engineering and Physical Sciences Research Council (EPSRC), United Kingdom. [<a href="https://www.sheffield.ac.uk/eee/research/cr/research/rwscvs">Link</a>]  | 2006-2010 | Award value: GBP 90,000.</li>
