--- a/research.html
+++ b/research.html
@@ -110,6 +110,7 @@
 									<a href="research.html">Research</a>
 									<a href="publication.html">Publications</a>
 									<a href="funding.html">Funding</a>								
+									<a href="openings.html">Openings</a>
 								</nav>
 
 						</div>
