--- a/publication.html
+++ b/publication.html
@@ -32,7 +32,7 @@
 									<a href="research.html">Research</a> 
 									<a href="publication.html">Publications</a>
 									<a href="funding.html">Funding</a>
-									<!--<a href="other.html">Other stuffs</a> -->
+									<a href="openings.html">Openings</a>
 								</nav>
 
 						</div>
@@ -80,12 +80,13 @@
 								<ul class="link-list">	
 								<font color="#FF4000">2017</font> 								
 								<li>C21. N. Baisa, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">Long-term Correlation Tracking using Multi-layer Hybrid Features in Dense Environments</font>, International Conference on Computer Vision Theory and Applications (<a href="http://www.visapp.visigrapp.org/">VISAPP 2017</a>), February 27 - March 1, 2017, Porto, Portugal. [PDF][DOI] </li>									
+								<li>B1. <u>D. Bhowmik</u> and M. Emambakhsh, <font color="#500000 "> Image Processing for Surveillance and Security</font>, Accepted for publication in Handbook of Research on Applied Cybernetics and Systems Science, IGI Global. [PDF][DOI] </li>				
 								<font color="#FF4000">2016</font> 
 								
-								<li>J9. M. Oakes, <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 "> Global Motion Compensated Visual Attention based Video Watermarking </font>, Accepted for publication in Special issue in Perceptually Driven Visual Information Analysis, SPIE Journal of Electronic Imaging.</li>
+								<li>J9. M. Oakes, <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 "> Global Motion Compensated Visual Attention based Video Watermarking </font>, Special issue in Perceptually Driven Visual Information Analysis, SPIE Journal of Electronic Imaging, SPIE, 25(6), 061624, Dec  2016.</li>
 								<li>J8. <u>D. Bhowmik</u>, M. Oakes and C. Abhayaratne, <font color="#500000 "> Visual Attention-based Image Watermarking </font>, IEEE Access, Vol 4, 2016. [<a href= "http://shura.shu.ac.uk/14145/7/Bhowmik%20Visual%20Attention-based%20Image%20Watermarking.pdf">PDF</a>][<a href="http://dx.doi.org/10.1109/ACCESS.2016.2627241">DOI</a>] </li>
 								<li>J7. <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 ">Quality Scalability Aware Watermarking for Visual Content</font>, IEEE Transactions on Image Processing, Vol. 25, Issue: 11, Nov, 2016. [<a href="http://shura.shu.ac.uk/13806/1/BA_SC_WM.pdf">PDF</a>][<a href="http://dx.doi.org/10.1109/TIP.2016.2599785">DOI</a>][<a href="https://github.com/dbhowmik/scalableWM">Source Code</a>] </li>				
-								<li>B1. <u>D. Bhowmik</u> and M. Emambakhsh, <font color="#500000 "> Image Processing for Surveillance and Security</font>, Accepted for publication in Handbook of Research on Applied Cybernetics and Systems Science, IGI Global. [PDF][DOI] </li>								
+												
 								<li>C20. R. Stewart, G. Michaelson, <u>D. Bhowmik</u>, P. Garcia and A. Wallace, <font color="#500000 ">A Dataflow IR for Memory Efficient RIPL Compilation to FPGAs</font>, International Workshop on Data Locality in Modern Computing Systems (<a href="http://www.dlmcs.org/2016/">DLMCS 2016</a>), December 14-16, 2016, Granada, Spain. [PDF][<a href="http://dx.doi.org/10.1007/978-3-319-49956-7_14"> DOI</a>] </li>
 
 								<font color="#FF4000">2015</font> 
