--- a/publication.html
+++ b/publication.html
@@ -71,8 +71,7 @@
 								<a href="publication.html#thesis">Thesis</a> | 
 								<a href="publication.html#tutorials">Tutorials</a> | 
 								<a href="publication.html#workshops">Workshop talks</a> |
-								<a href="http://scholar.google.co.uk/citations?user=QyWIGekAAAAJ&amp;hl=en" target="_blank">Google Scholar Profile</a> | 
-								<a href="https://pureapps2.hw.ac.uk/portal/en/persons/deepayan-bhowmik(cd901915-57a5-4a94-bef9-d930410b8c7d).html" target="_blank">Heriot-Watt Research Profile</a>
+								<a href="http://scholar.google.co.uk/citations?user=QyWIGekAAAAJ&amp;hl=en" target="_blank">Google Scholar Profile</a> 
 								
 								</center>																
 								<a name="previewed"></a>
