BSI website update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <a href="https://www.digitalcatapultcentre.org.uk/university-partner/deepayan-bhowmik/">EPSRC-Digital Catapult Researcher in Residence</a> |
 <a href= "https://www.digitalcatapultcentre.org.uk/">Digital Catapult Center </a> | London, United Kingdom.
 <br>
-Committee member: <a href="https://standardsdevelopment.bsigroup.com/Home/Committee/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. <br>
+Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. <br>
 									</p>
 
 <h3>I am looking for PhD students. <a href="openings.html"> Check here for current openings</a>. </h3></p>
