--- a/media-streaming.html
+++ b/media-streaming.html
@@ -63,8 +63,8 @@ from the same feed a mobile device will choose smaller size video stream but a d
 										<li> Open to 2nd year undergraduate students</li>
 										<li> Group of up to 3 individual members (single person group is possible)</li>
 										<li> Need to demonstrate, write a short report / doc, provide code </li> 
-										<li> Registration to <a mailto="deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> </li>
-										<li> Deadline: 28th April </li>
+										<li> Registration to <a mailto="deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> by 15th March 2017.</li>
+										<li> Deadline to submit code and report: 28th April </li>
 										<li> Prize: Winner: £150 cash / voucher, Runner: £100 cash / voucher</li>
 										<li> </li>
 										<li> Funding acknowledgement: Learning and Teaching Enhancement Grant, Sheffield Hallam Univeristy. </li>	
