--- a/hardware-software.html
+++ b/hardware-software.html
@@ -70,7 +70,7 @@ Hardware: Raspberry Pi, Pi Zero, Arduino Uno, Intel Galileo, BeagleBone / Any an
 
 <h3>Rules</h3>
 <ul class="link-list">
-										<li> Open to 2nd year undergraduate students</li>
+										<li> Open to 1st year undergraduate students</li>
 										<li> Group of up to 3 individual members (single person group is possible)</li>
 										<li> Need to demonstrate, write a short report / doc, provide code </li> 
 										<li> Registration to <a mailto="deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> by 15th March 2017.</li>
