--- a/dsp17ss/index.html
+++ b/dsp17ss/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Multimedia </title>
+		<title>DSP 2017: Special Session on Multimedia Signal Processing for Cyber-security and Privacy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
