scope of the topics

--- a/dsp17ss/index.html
+++ b/dsp17ss/index.html
@@ -70,13 +70,15 @@ August 23-25, London, United Kingdom</p>
 									<h3>Call for papers</h3>
 									<p>Prospective authors are invited to submit high-quality full papers representing original results in all areas of Multimedia Signal Processing for Cyber-security and Privacy. The list of topics of interest includes, but is not limited to:</p>
 									<ul>
-										<li>Robust and resilient multimedia watermarking techniques</li>
-										<li>Advancement in signal decomposition and analysis in online space</li>										
+										<li>RobustRobust and resilient multimedia watermarking and data hiding</li>
+										<li>Advancements in signal decomposition and analysis in online space</li>										
 										<li>Secure media sharing in social networks ensuring privacy and trust</li>
-										<li>Applications of visual attention modelling in media forensics and  security</li>
+										<li>Attention modelling for media forensics and security</li>
 										<li>Multimedia blockchain for future media consumption</li>
-										<li>Multimedia forensics (e.g., audio, image and video retrieval, forgery detection using camera aberration etc.)</li>
+										<li>Multimedia forensics (e.g., content-based retrieval, forgery detection, camera sensor characteristics modelling and analysis.)</li>
+										<li>Multimedia security in international standards</li>
 									</ul>
+
 								</div>
 							</section>
 
@@ -85,36 +87,11 @@ August 23-25, London, United Kingdom</p>
 								<div class="container">
 									<h3>Organisers</h3>
 									<p>
-Deepayan Bhowmik, Dept of Computing, Sheffield Hallam University, UK (<a href="mailto:deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a>) <br/>
-Charith Abhayartne, Dept of Electronic & Electrical Engineering, University of Sheffield, UK
+<a href="https://dbhowmik.github.io/">Deepayan Bhowmik</a>, Dept of Computing, Sheffield Hallam University, UK (<a href="mailto:deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a>) <br/>
+
+<a href="http://charith-abhayaratne.staff.shef.ac.uk/">Charith Abhayartne</a>, Dept of Electronic & Electrical Engineering, University of Sheffield, UK
 (<a href="mailto:c.abhayaratne@sheffield.ac.uk">c.abhayaratne@sheffield.ac.uk</a>)
 </p>
-<!--								
-	<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-									</div>
-								</div>
--->
 							</section>
 
 						<!-- Four -->
