--- a/dsp17ss/index.html
+++ b/dsp17ss/index.html
@@ -70,7 +70,7 @@ August 23-25, London, United Kingdom</p>
 									<h3>Call for papers</h3>
 									<p>Prospective authors are invited to submit high-quality full papers representing original results in all areas of Multimedia Signal Processing for Cyber-security and Privacy. The list of topics of interest includes, but is not limited to:</p>
 									<ul>
-										<li>RobustRobust and resilient multimedia watermarking and data hiding</li>
+										<li>Robust and resilient multimedia watermarking and data hiding</li>
 										<li>Advancements in signal decomposition and analysis in online space</li>										
 										<li>Secure media sharing in social networks ensuring privacy and trust</li>
 										<li>Attention modelling for media forensics and security</li>
