--- a/dsp17ss/index.html
+++ b/dsp17ss/index.html
@@ -110,7 +110,7 @@ August 23-25, London, United Kingdom</p>
 								<div class="container">
 									<h3>Important Dates</h3>
 <p>
-Paper submission dedline: April 14, 2017 </br>
+Paper submission deadline: April 14, 2017 </br>
 Authors notification: June 28, 2017 </br>
 Camera ready papers due: July 10, 2017 </br>
 Conference dates: August 23-25, 2017
