Minor update dsp

--- a/dsp17ss/index.html
+++ b/dsp17ss/index.html
@@ -89,7 +89,7 @@ August 23-25, London, United Kingdom</p>
 									<p>
 <a href="https://dbhowmik.github.io/">Deepayan Bhowmik</a>, Dept of Computing, Sheffield Hallam University, UK (<a href="mailto:deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a>) <br/>
 
-<a href="http://charith-abhayaratne.staff.shef.ac.uk/">Charith Abhayartne</a>, Dept of Electronic & Electrical Engineering, University of Sheffield, UK
+<a href="http://charith-abhayaratne.staff.shef.ac.uk/">Charith Abhayaratne</a>, Dept of Electronic & Electrical Engineering, University of Sheffield, UK
 (<a href="mailto:c.abhayaratne@sheffield.ac.uk">c.abhayaratne@sheffield.ac.uk</a>)
 </p>
 							</section>
