date change for hardware contest

--- a/hardware-software.html
+++ b/hardware-software.html
@@ -73,8 +73,8 @@ Hardware: Raspberry Pi, Pi Zero, Arduino Uno, Intel Galileo, BeagleBone / Any an
 										<li> Open to 1st year undergraduate students</li>
 										<li> Group of up to 3 individual members (single person group is possible)</li>
 										<li> Need to demonstrate, write a short report / doc, provide code </li> 
-										<li> Registration to <a mailto="deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> by 9th April 2017.</li>
-										<li> Deadline to submit code and report: 28th April 2017</li>
+										<li> Registration to <a mailto="deepayan.bhowmik@shu.ac.uk">deepayan.bhowmik@shu.ac.uk</a> by 1st June 2017.</li>
+										<li> Deadline to submit code and report: 30th June 2017</li>
 										<li> Prize: Winner: £150 cash / voucher, Runner: £100 cash / voucher</li>
 										<li> </li>
 										<li> Funding acknowledgement: Learning and Teaching Enhancement Grant, Sheffield Hallam Univeristy. </li>	
