DSP paper acceptance

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/
 									<ul class="link-list">
 						
 <li><h3>I am looking for PhD students. <a href="openings.html"> Check here for current openings</a>. </h3> </li>
+<li><font color="#FF4000">26/06/2017</font> Our paper on "The Multimedia Blockchain: A Distributed and Tamper-Proof Media Transaction Framework" is accepted for publication in <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
 <li><font color="#FF4000">14/04/2017</font> We are organising a special session on <a href="https://dbhowmik.github.io/dsp17ss/"> Multimedia Signal Processing for Cyber-security and Privacy</a> at <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
 <li><font color="#FF4000">16/03/2017</font> Our book chapter titled <a href="https://www.igi-global.com/chapter/image-processing-for-surveillance-and-security/181096">Image Processing for Surveillance and Security</a> is published in Handbook of Research on Applied Cybernetics and Systems Science, IGI Global.</li>
 <li><font color="#FF4000">02/03/2017</font> Our paper on <a href="http://www.scitepress.org/DigitalLibrary/PublicationsDetail.aspx?ID=WyeWvVG2P5E=&t=1">Long-term Correlation Tracking using Multi-layer Hybrid Features in Dense Environments</a> is published in the International Conference on Computer Vision Theory and Applications (<a href="http://www.visapp.visigrapp.org/">VISAPP 2017</a>), February 27 - March 1, 2017, Porto, Portugal.</li>
