--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/
 									<h2>Latest</h2>
 									<ul class="link-list">
 						
+<li><h3> We are organising a special session on <a href="https://dbhowmik.github.io/dsp17ss/"> Multimedia Signal Processing for Cyber-security and Privacy</a> at <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</h3></li>
 <li><h3>I am looking for PhD students. <a href="openings.html"> Check here for current openings</a>. </h3> </li>
 <li><font color="#FF4000">26/06/2017</font> Our paper on "The Multimedia Blockchain: A Distributed and Tamper-Proof Media Transaction Framework" is accepted for publication in <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
 <li><font color="#FF4000">14/04/2017</font> We are organising a special session on <a href="https://dbhowmik.github.io/dsp17ss/"> Multimedia Signal Processing for Cyber-security and Privacy</a> at <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
