--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,9 @@
 								<h3>Journals (J#) and Conferences (C#)</h3>	
 								<ul class="link-list">	
 								<font color="#FF4000">2017</font> 								
+								<li>C23. <u>D. Bhowmik</u>, Paulo Garcia, Andrew Wallace, Robert Stewart and Greg Michaelson, <font color="#500000 ">Power Efficient Dataflow Design for a Heterogeneous Smart Camera</font>, [Accepted] Conference on Design and Architectures for Signal and Image Processing (<a href="http://dasip2017.esit.rub.de/">DASIP 2017</a>), September 27 - 29, 2017, Dresden, Germany. [PDF][DOI] </li>
+
+								<li>C22. <u>D. Bhowmik</u> and T. Feng, <font color="#500000 ">The Multimedia Blockchain: A Distributed and Tamper-Proof Media Transaction Framework</font>, [Accepted] International Conference on Digital Signal Processing (<a href="http://dsp2017.com/">DSP 2017</a>), August 23 - 25, 2017, London, UK. [PDF][DOI] </li>
 								<li>C21. N. Baisa, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">Long-term Correlation Tracking using Multi-layer Hybrid Features in Dense Environments</font>, International Conference on Computer Vision Theory and Applications (<a href="http://www.visapp.visigrapp.org/">VISAPP 2017</a>), February 27 - March 1, 2017, Porto, Portugal. [PDF][DOI] </li>									
 								<li>B1. <u>D. Bhowmik</u> and M. Emambakhsh, <font color="#500000 "> Image Processing for Surveillance and Security</font>, Accepted for publication in Handbook of Research on Applied Cybernetics and Systems Science, IGI Global. [PDF][DOI] </li>				
 								<font color="#FF4000">2016</font> 
