--- a/publication.html
+++ b/publication.html
@@ -77,6 +77,10 @@
 								<a name="previewed"></a>
 								<h3>Journals (J#) and Conferences (C#)</h3>	
 								<ul class="link-list">	
+								<font color="#FF4000">2018</font> 
+								<li>J10. R. Stewart, K. Duncan, P. Garcia, G. Michaelson, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">RIPL: A Parallel Image Processing Language for FPGAs</font> , ACM Transaction on Reconfigurable Technology and Systems (TRETS), [Accepted], 2018.<li>								
+								<li>C25. P. Garcia, <u>D. Bhowmik</u>, A. Wallace, R. Stewart and G. Michaelson, <font color="#500000 "> Area-Energy Aware Dataflow Optimisation of Visual Tracking Systems</font>, [Accepted] Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece.  </li>
+								<li>C24. <u>D. Bhowmik</u> and K. Appiah, <font color="#500000 ">Embedded Vision Systems: A Review of the Literature</font>, [Accepted] Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece. </li>	
 								<font color="#FF4000">2017</font> 								
 								<li>C23. <u>D. Bhowmik</u>, Paulo Garcia, Andrew Wallace, Robert Stewart and Greg Michaelson, <font color="#500000 ">Power Efficient Dataflow Design for a Heterogeneous Smart Camera</font>, [Accepted] Conference on Design and Architectures for Signal and Image Processing (<a href="http://dasip2017.esit.rub.de/">DASIP 2017</a>), September 27 - 29, 2017, Dresden, Germany. [PDF][DOI] </li>
 
