--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,7 @@
 								<h3>Journals (J#) and Conferences (C#)</h3>									
 								<font color="#FF4000">2018</font> 
 								<ul class="link-list">
+								<li> C26. <u> D. Bhowmik </u> and A. Wallace, <font color="#500000 "> Statistical t+2D Subband Modelling for Crowd Counting </font>, [Accepted] IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), April 15-20, 2018, Calgary, Canada.  </li>
 								<li>J10. R. Stewart, K. Duncan, P. Garcia, G. Michaelson, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">RIPL: A Parallel Image Processing Language for FPGAs</font> , ACM Transaction on Reconfigurable Technology and Systems (TRETS), [Accepted], 2018.<li>								
 								<li>C25. P. Garcia, <u>D. Bhowmik</u>, A. Wallace, R. Stewart and G. Michaelson, <font color="#500000 "> Area-Energy Aware Dataflow Optimisation of Visual Tracking Systems</font>, [Accepted] Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece.  </li>
 								<li>C24. <u>D. Bhowmik</u> and K. Appiah, <font color="#500000 ">Embedded Vision Systems: A Review of the Literature</font>, [Accepted] Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece. </li>
