--- a/index.html
+++ b/index.html
@@ -63,8 +63,18 @@ Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/
 									<h2>Latest</h2>
 									<ul class="link-list">
 						
-<li><h3> We are organising a special session on <a href="https://dbhowmik.github.io/dsp17ss/"> Multimedia Signal Processing for Cyber-security and Privacy</a> at <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</h3></li>
+<li><h3> We are editing a special issue on <a href="https://www.journals.elsevier.com/journal-of-information-security-and-applications/call-for-papers/special-issue-on-advances-in-multimedia-signal-processing-fo"> Advances in Multimedia Signal Processing for Cybersecurity</a> in <a href="https://www.journals.elsevier.com/journal-of-information-security-and-applications">Elsevier JISA</a>.</h3></li>
 <li><h3>I am looking for PhD students. <a href="openings.html"> Check here for current openings</a>. </h3> </li>
+
+<li><font color="#FF4000">29/01/2018</font> Our paper titled "Statistical t+2D Subband Modelling for Crowd Counting" is accepted for publication in IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), April 15-20, 2018, Calgary, Canada.</li>
+
+<li><font color="#FF4000">05/01/2018</font> Our paper titled "Area-Energy Aware Dataflow Optimisation of Visual Tracking Systems" is accepted for publication in Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece.</li>
+
+<li><font color="#FF4000">05/01/2018</font> Our paper titled "Embedded Vision Systems: A Review of the Literature" is accepted for publication in Int'l Symposium on Applied Reconfigurable Computing (ARC), May 2-4, 2018, Santorini, Greece.</li>
+
+<li><font color="#FF4000">03/01/2018</font> Our paper titled "RIPL: A Parallel Image Processing Language for FPGAs" is accepted for publication in ACM Transaction on Reconfigurable Technology and Systems (TRETS).</li>
+
+
 <li><font color="#FF4000">10/07/2017</font> Our paper titled "Power Efficient Dataflow Design for a Heterogeneous Smart Camera" is accepted for publication in <a href="http://dasip2017.esit.rub.de/">DASIP 2017</a>, Dresden, Germany.</li>
 <li><font color="#FF4000">26/06/2017</font> Our paper on "The Multimedia Blockchain: A Distributed and Tamper-Proof Media Transaction Framework" is accepted for publication in <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
 <li><font color="#FF4000">14/04/2017</font> We are organising a special session on <a href="https://dbhowmik.github.io/dsp17ss/"> Multimedia Signal Processing for Cyber-security and Privacy</a> at <a href="http://dsp2017.com/">IEEE DSP 2017</a>, London, UK.</li>
