--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/
 							<div class="9u">
 							<section>										
 									<h2>Latest</h2>
+<ul class="link-list">
+						
+<li><h3> I'm moving to <a href="https://www.stir.ac.uk/">University of Stirling</a>, UK. I'll join <a href="http://cs.stir.ac.uk/">department of Computing Science and Mathematics</a> from June 2018.</h3></li>
 									<ul class="link-list">
 						
 <li><h3> We are editing a special issue on <a href="https://www.journals.elsevier.com/journal-of-information-security-and-applications/call-for-papers/special-issue-on-advances-in-multimedia-signal-processing-fo"> Advances in Multimedia Signal Processing for Cybersecurity</a> in <a href="https://www.journals.elsevier.com/journal-of-information-security-and-applications">Elsevier JISA</a>.</h3></li>
