--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,14 @@
 								<h3>Journals (J#) and Conferences (C#)</h3>									
 								<font color="#FF4000">2018</font> 
 								<ul class="link-list">
+								<li> C29. <u> D. Bhowmik </u>, A. Natu, T. Ishikawa, T. Feng and C. Abhayaratne, <font color="#500000 "> The JPEG blockchain framework for GLAM services </font>, [Accepted] IEEE International Conference on Multimedia and Expo Workshop (ICMEW), July 23-27, 2018, San Diego, USA.  </li>
+	
+								<li> C28. <u> D. Bhowmik </u> et al., <font color="#500000 "> Robots claiming space: Gauging public reaction using
+computer vision techniques </font>, [Accepted] Towards Autonomous Robotic Systems (TAROS), July 25-27, 2018, Bristol, UK.  </li>
+
+
+								<li> C27. O. Ajao, <u> D. Bhowmik </u> and S. Zargari, <font color="#500000 "> Fake News Identification on Twitter with Hybrid CNN and RNN Models </font>, [Accepted] ACM International Conference on Social Media and Society (SMSociety), July 18-20, 2018, Copenhagen, Denmark.  </li>
+
 								<li> C26. <u> D. Bhowmik </u> and A. Wallace, <font color="#500000 "> Statistical t+2D Subband Modelling for Crowd Counting </font>, [Accepted] IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), April 15-20, 2018, Calgary, Canada.  </li>
 
 								<li>J10. R. Stewart, K. Duncan, P. Garcia, G. Michaelson, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">RIPL: A Parallel Image Processing Language for FPGAs</font> , ACM Transaction on Reconfigurable Technology and Systems (TRETS), [Accepted], 2018.<li>	
