--- a/publication.html
+++ b/publication.html
@@ -67,7 +67,7 @@
 							<!-- Main Content -->
 							<section>
 								<center>
-								<a href="publication.html#journals">Journal</a> |
+								<a href="publication.html#journals">Journals</a> |
 								<a href="publication.html#conferences">Conferences</a> |  								
 								<a href="publication.html#thesis">Thesis</a> | 
 								<a href="publication.html#tutorials">Tutorials</a> | 
@@ -95,7 +95,7 @@
 								<h3>Peer Reviwed Conferences (C#)</h3>									
 								<font color="#FF4000">2018</font> 
 								<ul class="link-list">
-								<li> C29. <u> D. Bhowmik </u>, A. Natu, T. Ishikawa, T. Feng and C. Abhayaratne, <font color="#500000 "> The JPEG blockchain framework for GLAM services </font>, [Accepted] IEEE International Conference on Multimedia and Expo Workshop (ICMEW), July 23-27, 2018, San Diego, USA.  </li>
+								<li> C29. <u> D. Bhowmik </u>, A. Natu, T. Ishikawa, T. Feng and C. Abhayaratne, <font color="#500000 "> The JPEG blockchain framework for GLAM services </font>, [Accepted] IEEE International Conference on Multimedia and Expo (ICME), July 23-27, 2018, San Diego, USA.  </li>
 	
 								<li> C28. <u> D. Bhowmik </u> et al., <font color="#500000 "> Robots claiming space: Gauging public reaction using
 computer vision techniques </font>, [Accepted] Towards Autonomous Robotic Systems (TAROS), July 25-27, 2018, Bristol, UK.  </li>
