Changes in recent publication.

--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,8 @@
 								<a name="journals"></a>
 								<h3>Journals (J#) </h3>									
 								<ul class="link-list">
+								<li>J11. N. Baisa, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">Long-term Correlation Tracking using Multi-layer Hybrid Features in Sparse and Dense Environments</font>, [Accepted] Elsevier Journal of Visual Communication and Image Representation, 2018. [PDF][DOI] </li>									
+									
 								<li>J10. R. Stewart, K. Duncan, P. Garcia, G. Michaelson, <u>D. Bhowmik</u> and A. Wallace, <font color="#500000 ">RIPL: A Parallel Image Processing Language for FPGAs</font> , ACM Transaction on Reconfigurable Technology and Systems (TRETS), [Accepted], 2018.<li>	
 							
 								<li>J9. M. Oakes, <u>D. Bhowmik</u> and C. Abhayaratne, <font color="#500000 "> Global Motion Compensated Visual Attention based Video Watermarking </font>, Special issue in Perceptually Driven Visual Information Analysis, SPIE Journal of Electronic Imaging, SPIE, 25(6), 061624, Dec  2016.</li>
@@ -95,6 +97,8 @@
 								<h3>Peer Reviwed Conferences (C#)</h3>									
 								<font color="#FF4000">2018</font> 
 								<ul class="link-list">
+								<li> C30. O. Ajao, <u> D. Bhowmik </u> and S. Zargari, <font color="#500000 "> Fake News Identification on Twitter with Hybrid CNN and RNN Models </font>, [Accepted] IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) Workshop, August 28-31, 2018, Bercelona, Spain.  </li>
+
 								<li> C29. <u> D. Bhowmik </u>, A. Natu, T. Ishikawa, T. Feng and C. Abhayaratne, <font color="#500000 "> The JPEG blockchain framework for GLAM services </font>, [Accepted] IEEE International Conference on Multimedia and Expo (ICME), July 23-27, 2018, San Diego, USA.  </li>
 	
 								<li> C28. <u> D. Bhowmik </u> et al., <font color="#500000 "> Robots claiming space: Gauging public reaction using
