minor change in title

--- a/publication.html
+++ b/publication.html
@@ -97,7 +97,7 @@
 								<h3>Peer Reviwed Conferences (C#)</h3>									
 								<font color="#FF4000">2018</font> 
 								<ul class="link-list">
-								<li> C30. O. Ajao, <u> D. Bhowmik </u> and S. Zargari, <font color="#500000 "> Fake News Identification on Twitter with Hybrid CNN and RNN Models </font>, [Accepted] IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) Workshop, August 28-31, 2018, Bercelona, Spain.  </li>
+								<li> C30. O. Ajao, <u> D. Bhowmik </u> and S. Zargari, <font color="#500000 "> Content Aware Tweet Location Inference using Quadtree Spatial Partitioning and Jaccard-Cosine Word Embedding </font>, [Accepted] IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM) Workshop, August 28-31, 2018, Bercelona, Spain.  </li>
 
 								<li> C29. <u> D. Bhowmik </u>, A. Natu, T. Ishikawa, T. Feng and C. Abhayaratne, <font color="#500000 "> The JPEG blockchain framework for GLAM services </font>, [Accepted] IEEE International Conference on Multimedia and Expo (ICME), July 23-27, 2018, San Diego, USA.  </li>
 	
