--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 								<section>
 								<h2>Lecturer (Assistant Professor)</h2>
 									
-<a href="www.cs.stir.ac.uk"> Department of Computing Science and Mathematics</a> | 
-<a href="www.stir.ac.uk"> University of Stirling </a> | Stirling, UK. 
+<a href="https://www.cs.stir.ac.uk"> Department of Computing Science and Mathematics</a> | 
+<a href="https://www.stir.ac.uk"> University of Stirling </a> | Stirling, UK. 
 <hr>
 Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. 
 <hr>																											Contact: <a href="mailto:deepayan.bhowmik@stir.ac.uk">deepayan.bhowmik@stir.ac.uk</a> 
