--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<section>
 								<h2>Lecturer (Assistant Professor)</h2>
 									
-<a href="https://www.cs.stir.ac.uk"> Department of Computing Science and Mathematics</a> | 
+<a href="http://www.cs.stir.ac.uk"> Department of Computing Science and Mathematics</a> | 
 <a href="https://www.stir.ac.uk"> University of Stirling </a> | Stirling, UK. 
 <hr>
 Committee member: <a href="https://standardsdevelopment.bsigroup.com/committees/50000687"> BSI IST/037 Coding of picture, audio and multimedia </a>. 
