--- a/about.html
+++ b/about.html
@@ -72,7 +72,8 @@
 								 <p> <a name="employment"></a>	 
 									</p><h3>Employment</h3>
 									<ul class="link-list">
-										<li>Lecturer, <a href="http://www.shu.ac.uk/" target="_blank">Sheffield Hallam University</a>, Sheffield, UK | 2016-Current.</li>
+										<li>Lecturer, <a href="http://www.stir.ac.uk/" target="_blank">University of Stirling</a>, Stirling, UK | 2018-Current.</li>
+										<li>Lecturer, <a href="http://www.shu.ac.uk/" target="_blank">Sheffield Hallam University</a>, Sheffield, UK | 2016-2018.</li>
 										<li>Research Associate, <a href="http://www.hw.ac.uk/" target="_blank">Heriot-Watt University</a>, Edinburgh, UK | 2013-2016.</li>
 										<li>Research Associate, <a href="http://www.sheffield.ac.uk/" target="_blank">The University of Sheffield</a>, Sheffield, UK | 2011-2013.</li>
 										<li>System Engineer, <a href="http://www.abb.com/" target="_blank">ABB Ltd.</a>, Vadodara, India | 2003-2005.</li>
