--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Redirecting to my University of Stirling website</title>
-<!--<meta http-equiv="refresh" content="0; URL=http://www.cs.stir.ac.uk/~dbh/">
+<meta http-equiv="refresh" content="0; URL=http://www.cs.stir.ac.uk/~dbh/">
 <meta name="keywords" content="automatic redirection">
 </head>
 <body>
@@ -9,15 +9,5 @@ If your browser doesn't automatically go there within a few seconds,
 you may want to go to 
 <a href="http://www.cs.stir.ac.uk/~dbh/">www.cs.stir.ac.uk/~dbh/</a> 
 manually.
--->
-<meta http-equiv="refresh" content="5; URL=https://sites.google.com/view/jozsef-zoltan-farkas/home">
-<meta name="keywords" content="automatic redirection">
-</head>
-<body>
-If your browser doesn't automatically go there within a few seconds, 
-you may want to go to 
-<a href="https://sites.google.com/view/jozsef-zoltan-farkas/home">https://sites.google.com/view/jozsef-zoltan-farkas/home</a> 
-manually.
-
 </body>
 </html>
