--- a/test/mars_index.html
+++ b/test/mars_index.html
@@ -6,6 +6,7 @@
 
 <p><a href="mars_coverage_graph.html">Coverage Analysis</a></p>
 <p><a href="sales_stat.html">Sales Analysis</a></p>
+<p><a href="ub-outlet-stat.html">Unbilled Outlet Analysis</a></p>
 
 </body>
 </html>
